--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@testing-library/user-event": "^12.1.10",
     "file-saver": "^2.0.5",
     "jszip": "^3.7.1",
-    "mui-image": "^1.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.1.1",
@@ -26,7 +25,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build  ; D:\\refacted_exviewer\\copyBuild.bat",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
