--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "refacted_exviewer",
   "version": "0.1.0",
   "private": false,
+  "homepage": ".",
   "proxy": "http://127.0.0.1:8080",
   "dependencies": {
     "@emotion/react": "^11.7.0",
