--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-virtualized": "^9.22.3",
     "sass": "^1.49.9",
     "swiper": "^8.0.6",
     "web-vitals": "^2.1.4"
