--- a/package.json
+++ b/package.json
@@ -1,30 +1,29 @@
 {
-  "name": "exviewerui",
+  "name": "refacted_exviewer",
   "version": "0.1.0",
-  "private": false,
   "homepage": ".",
+  "private": false,
   "proxy": "http://127.0.0.1:8080",
   "dependencies": {
-    "@emotion/react": "^11.8.1",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.4.4",
-    "@mui/material": "^5.4.4",
-    "@mui/styles": "^5.4.4",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.1",
+    "@mui/material": "^5.2.3",
+    "@mui/styles": "^5.2.3",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "file-saver": "^2.0.5",
     "jszip": "^3.7.1",
-    "localforage": "^1.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router": "^6.2.2",
-    "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-router": "^6.1.1",
+    "react-router-dom": "^6.1.1",
+    "react-scripts": "4.0.3",
     "react-virtualized": "^9.22.3",
-    "sass": "^1.49.9",
-    "swiper": "^8.0.6",
-    "web-vitals": "^2.1.4"
+    "sass": "^1.45.0",
+    "swiper": "6.0.2",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
