--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-virtualized": "^9.22.3",
     "sass": "^1.45.0",
     "swiper": "6.0.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
