--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "homepage": ".",
   "private": false,
   "proxy": "http://127.0.0.1:8080",
+  "resolutions": {
+    "//": "See https://github.com/facebook/create-react-app/issues/11773",
+    "react-error-overlay": "6.0.9"
+  },
   "dependencies": {
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
