--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "echarts": "^5.3.1",
     "file-saver": "^2.0.5",
     "jszip": "^3.8.0",
     "react": "^18.0.0",
