--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 /TEMPLATE
 
 
+
 # misc
 .DS_Store
 .env.local
@@ -25,5 +26,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-server/utils/__pycache__/
-server/__pycache__/
+
+*/__pycache__
