--- a/app.json
+++ b/app.json
@@ -1,18 +1,26 @@
 {
     "name": "EXviewer",
-    "description": "web based client for the Exhentai",
-    "keywords": ["react exhentai"],
+    "description": "PWA for the Exhentai",
+    "keywords": ["pwa", "exhentai"],
     "env": {
-        "EHCOOKIE": {
-            "description": "输入提取到的cookie值",
+        "EH_COOKIE": {
+            "description": "E站的cookie值",
             "value": "ipb_member_id=******; ipb_pass_hash=******; igneous=******; sl=dm_1; sk=******; s=******"
         },
-        "PUBLIC_ENV": {
-            "description": "公共环境",
+        "EH_FAVORITE_DISABLED": {
+            "description": "禁用添加删除收藏",
+            "value": "true"
+        },
+        "EH_DOWNLOAD_DISABLED": {
+            "description": "禁用下载功能",
+            "value": "true"
+        },
+        "EH_POST_COMMENT_DISABLED": {
+            "description": "禁用发表评论功能",
             "value": "true"
         }
     },
-    "website": "https://github.com/DriverLin/EXviewer",
-    "repository": "https://github.com/DriverLin/EXviewer",
+    "website": "https://github.com/DriverLin/EXviewerUI",
+    "repository": "https://github.com/DriverLin/EXviewerUI",
     "success_url": "/"
 }
