添加了评分api

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,12 @@
 {
     "cSpell.words": [
+        "apikey",
+        "apiuid",
+        "Autorenew",
         "autorun",
         "EHDB",
         "Exviewer",
-        "Gdata"
+        "Gdata",
+        "rategallery"
     ]
 }
