条漫阅读适配中...

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
         "EHDB",
         "Exviewer",
         "Gdata",
-        "rategallery",
-        "lxml"
+        "lxml",
+        "overscan",
+        "rategallery"
     ]
 }
