--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "reconnecting-websocket": "^4.4.0",
     "redux": "^4.2.0",
     "sass": "^1.49.10",
+    "source-map-explorer": "^2.5.2",
     "swiper": "6.5.1",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
@@ -38,7 +39,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "eslintConfig": {
     "extends": [
