--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "ahooks": "^3.5.0",
+    "clipboard-copy": "^4.0.1",
     "echarts": "^5.3.1",
     "file-saver": "^2.0.5",
     "jszip": "^3.8.0",
