--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,20 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: install
+        run: yarn install
+
+      - name: move fake api
+        run: mv src\components\api\fakeApi.js src\components\api\serverApi.js
+
+      - name: build
+        run: yarn build
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
         
       # - name: Setup Debug Session
       #   uses: DriverLin/debugger-action@master
