--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,23 +25,21 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # - name: Setup Debug Session
-      #   uses: csexton/debugger-action@master
+      - name: Setup Debug Session
+        uses: csexton/debugger-action@master
 
+      # - name: move fake api
+      #   run: mv src/components/api/fakeApi.js src/components/api/serverApi.js
 
-      - name: move fake api
-        run: mv src/components/api/fakeApi.js src/components/api/serverApi.js
+      # - name: install
+      #   run: yarn install
 
-      # Runs a single command using the runners shell
-      - name: install
-        run: yarn install
+      # - name: build
+      #   run: yarn build
 
-      - name: build
-        run: yarn build
-
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
+      # - name: Deploy
+      #   uses: peaceiris/actions-gh-pages@v3
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     publish_dir: ./build
 
