--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,15 @@
         "Autorenew",
         "autorun",
         "EHDB",
+        "ehgt",
+        "exhentai",
         "Exviewer",
+        "favcat",
+        "favdel",
+        "favnote",
         "Gdata",
+        "gidlist",
+        "gmetadata",
         "lxml",
         "nosel",
         "overscan",
